--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "homepage": "https://github.com/tmad4000/XFeedParadise#readme",
   "dependencies": {
-    "@xenova/transformers": "^2.17.2"
+    "@xenova/transformers": "^2.17.2",
+    "playwright": "^1.57.0"
   },
   "devDependencies": {
     "esbuild": "^0.27.1"
