--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "name": "XFeed Paradise",
   "version": "1.3.0",
   "description": "AI-powered feed filter that surfaces uplifting content and hides outrage-bait",
+  "homepage_url": "https://github.com/tmad4000/XFeedParadise",
   "permissions": [
     "storage",
     "activeTab"
@@ -11,7 +12,8 @@
     "https://twitter.com/*",
     "https://x.com/*",
     "https://news.google.com/*",
-    "https://api.groq.com/*"
+    "https://api.groq.com/*",
+    "https://xvexqhejjdcysxgxanlm.supabase.co/*"
   ],
   "action": {
     "default_popup": "popup.html",
